# rdftest

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindRasqal.cmake  FindRedland.cmake  GitExternal.cmake
src/: GenKinectTraits.hpp  GenRedlandKinectTraits.hpp  GenRedlandPoseTraits.hpp  GenSeordKinectTraits.hpp  GenSeordPoseTraits.hpp  Kinect.hpp  KinectTraits.hpp  KinectUtils.hpp  Pose.hpp  PoseTraits.hpp  Profiler.h  RDFTraits.hpp  RedlandRDFTraits.hpp  SeordRDFTraits.hpp  arvida_pp_annotation.h  kinect_redland_writer.cpp  kinect_seord_writer.cpp  kinect_writer.cpp  pose_redland_writer.cpp  pose_sordmm.cpp  pose_sordmm2.cpp  pose_sordmm_reader.cpp  pose_sordmm_test_writer.cpp  pose_sordmm_writer.cpp  pose_sordmm_writer2.cpp  redland.hpp
src/reduced/: GenRedlandReducedKinectTraits.hpp  GenSeordReducedKinectTraits.hpp  RedlandRDFTraits.hpp  ReducedKinect.hpp  ReducedKinectTraits.hpp  ReducedKinectUtils.hpp  SeordRDFTraits.hpp  kinect_redland_reduced_writer.cpp  kinect_seord_reduced_writer.cpp
src/visitor/: Visitable.hpp  VisitorDetails.hpp
